Fix: video playing on mobile

--- a/src/app/home/components/home-about/home-about.component.scss
+++ b/src/app/home/components/home-about/home-about.component.scss
@@ -39,6 +39,9 @@
   .home-about-video {
     width: 170% !important;
     margin-left: -37% !important;
+    position: relative;
+    margin-bottom: -60px;
+
   }
 }
 
